--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/assets/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,13 +16,12 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
           <li>The meta element defines metadata such as the character set, description, keywords, author, and viewport.</li>
           <li>The link element connects an external resource to the HTML document.</li>
           <li>The base element the base URL for a webpage.</li>
-          <li>the style element defines the CSS styles associated with a website.</li>
+          <li>The style element defines the CSS styles associated with a website.</li>
           <li>The script element embeds client-side scripts in the HTML document.</li>
           <li>The section elements are semantic elements that define a section in a document that contains thematic content.</li>
         </ul>
@@ -31,16 +31,19 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A link element creates the connection to the external file.</li>
+          <li>The rel attribute specifies the relationship between the current document and the linked document resource</li>
+          <li>The href attribute specifies the location (URL) of the external resource</li>
         </ul>
       </section>
 
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
         </ul>
       </section>
 
