--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>An array is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A for loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li>A function is simply a set of instructions that tells the computer how to perform a certain task.</li>
+          <li>To declare a function, we use the function keyword and then give our function a unique name followed by parentheses. Then we add curly brackets {} that contain the code for the task we want to perform. In our example, we created two separate functions: one for our for loop and one for our if statement.</li>
         </ul>
       </section>
       <!-- Student code goes here -->
