--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on.</li>
+          <li>The Git commands are git checkout main to switch to the main branch, and git pull origin main to pull in the latest changes.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
         </ul>
       </section>
